# mcp-sdl

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  mcp.json.template  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/skills/contributor/: SKILL.md
.github/skills/mcp-developer/: SKILL.md
.github/skills/mcp-developer/references/: module-structure.md  patterns.md  templates.md
.github/skills/roadmap-manager/: SKILL.md
.github/skills/roadmap-manager/references/: best-practices.md  categories.md  examples.md
.github/workflows/: pr-requirements.yml  test.yml
src/mcp_sdl/: __init__.py  __main__.py  server.py
src/mcp_sdl/api/: __init__.py
src/mcp_sdl/api/sdl3/: __init__.py  categories.py
src/mcp_sdl/api/sdl3/category_error/: SDL_GetError.py  SDL_InvalidParamError.py  SDL_Unsupported.py  __init__.py
src/mcp_sdl/examples/: __init__.py
src/mcp_sdl/examples/sdl3/: __init__.py
src/mcp_sdl/migration/: SDL_atomic.py  SDL_audio.py  SDL_cpuinfo.py  SDL_endian.py  SDL_error.py  SDL_events.py  SDL_gamecontroller.py  SDL_gesture.py  SDL_guid.py  SDL_haptic.py  SDL_hints.py  SDL_init.py  SDL_joystick.py  SDL_keyboard.py  SDL_keycode.py  SDL_loadso.py  SDL_log.py  SDL_main.py  SDL_messagebox.py  SDL_metal.py  SDL_mouse.py  SDL_mutex.py  SDL_pixels.py  SDL_platform.py  SDL_quit.py  SDL_rect.py  SDL_render.py  SDL_rwops.py  SDL_scancode.py  SDL_sensor.py  SDL_shape.py  SDL_stdinc.py  SDL_surface.py  SDL_system.py  SDL_syswm.py  SDL_thread.py  SDL_timer.py  SDL_touch.py  SDL_version.py  SDL_video.py  (+2 more)
src/mcp_sdl/tools/: __init__.py  api_tools.py  examples_tools.py  migration_tools.py
tests/: __init__.py  conftest.py  test_api_category_structure.py  test_examples_structure.py  test_integration.py  test_tools.py  test_tools_structure.py
(+186 files in other folders)
